--- a/production/roles/bind-primary/templates/db.10.168.192.in-addr.arpa.j2
+++ b/production/roles/bind-primary/templates/db.10.168.192.in-addr.arpa.j2
@@ -1,6 +1,6 @@
 $TTL	604800
 @	IN	SOA	exo-industries.xyz. admin.exo-industries.xyz. (
-			2023060601	; Serial
+			2023060602	; Serial
 			 604800		; Refresh
 			  86400		; Retry
 			2419200		; Expire
@@ -8,3 +8,4 @@ $TTL	604800
 ;
 @	IN	NS	exo-industries.xyz.
 200	IN	PTR	exo-industries.xyz.
+204	IN	PTR	rsyslog.
