--- a/production/roles/bind-primary/templates/named.conf.options.j2
+++ b/production/roles/bind-primary/templates/named.conf.options.j2
@@ -3,10 +3,10 @@ options {
 	dnssec-validation auto;
 	listen-on-v6 { none; };
 	listen-on { 192.168.10.200; };
-	allow-transfer { 192.168.10.201; };
+	allow-transfer { 192.168.10.201; key dns1-dns2.; };
 	allow-query { 192.168.10.0/24; };
 	allow-recursion { 192.168.10.0/24; };
-	allow-notify { 192.168.10.201; };
-	allow-update { 192.168.10.201; };
+	allow-notify { 192.168.10.201; key dns1-dns2.; };
+	allow-update { 192.168.10.201; key dns1-dns2.; };
 	notify yes;
 };
