--- a/production/roles/bind-secondary/templates/named.conf.j2
+++ b/production/roles/bind-secondary/templates/named.conf.j2
@@ -1,4 +1,4 @@
 include "/etc/bind/named.conf.options";
 include "/etc/bind/named.conf.local";
 include "/etc/bind/named.conf.default-zones";
-include "/etc/bind/named.conf";
+include "/etc/bind/dns1-dns2.key";
