--- a/production/roles/bind-primary/templates/named.conf.options.j2
+++ b/production/roles/bind-primary/templates/named.conf.options.j2
@@ -1,6 +1,6 @@
 options {
 	directory "/var/cache/bind";
-	dnssec-validation auto;
+	dnssec-validation no;
 	listen-on-v6 { none; };
 	listen-on { 192.168.10.200; };
 	allow-transfer { 192.168.10.201; key dns1-dns2.; };
