--- a/production/roles/bind-secondary/templates/named.conf.options.j2
+++ b/production/roles/bind-secondary/templates/named.conf.options.j2
@@ -5,4 +5,5 @@ options {
 	listen-on { 192.168.10.201; };
 	allow-query { 192.168.10.0/24; };
 	allow-recursion { 192.168.10.0/24; };
+	allow-notify { 192.168.10.200; key dns1-dns2.; };
 };
