Remove allowè-update to the secondary

--- a/production/roles/bind-secondary/templates/named.conf.options.j2
+++ b/production/roles/bind-secondary/templates/named.conf.options.j2
@@ -6,4 +6,5 @@ options {
 	allow-query { 192.168.10.0/24; };
 	allow-recursion { 192.168.10.0/24; };
 	allow-notify { 192.168.10.200; key dns1-dns2.; };
+	allow-update { 192.168.10.200; key dns1-dns2.; };
 };
