--- a/production/roles/bind-secondary/templates/named.conf.options.j2
+++ b/production/roles/bind-secondary/templates/named.conf.options.j2
@@ -7,5 +7,6 @@ options {
 	allow-recursion { 192.168.10.0/24; };
 	allow-notify { 192.168.10.200; key dns1-dns2.; };
 	allow-update { 192.168.10.200; key dns1-dns2.; };
+	also-notify { 192.168.10.200; };
 	recursion yes;
 };
