Add new DNS entries. New serial.

--- a/production/roles/bind-primary/templates/db.10.168.192.in-addr.arpa.j2
+++ b/production/roles/bind-primary/templates/db.10.168.192.in-addr.arpa.j2
@@ -1,6 +1,6 @@
 $TTL	604800
 @	IN	SOA	exo-industries.xyz. admin.exo-industries.xyz. (
-			2023060602	; Serial
+			2023060701	; Serial
 			 604800		; Refresh
 			  86400		; Retry
 			2419200		; Expire
@@ -8,4 +8,7 @@ $TTL	604800
 ;
 @	IN	NS	exo-industries.xyz.
 200	IN	PTR	exo-industries.xyz.
+201	IN	PTR	exo-industries.xyz.
+202	IN	PTR	dhcp-master.
+203	IN	PTR	dhcp-slave.
 204	IN	PTR	rsyslog.
