Add Promgraf DNS entries

--- a/production/roles/bind-primary/templates/db.exo-industries.xyz.j2
+++ b/production/roles/bind-primary/templates/db.exo-industries.xyz.j2
@@ -12,3 +12,5 @@ $TTL	604800
 dhcp-master	IN	A	192.128.10.202
 dhcp-slave	IN	A	192.168.10.203
 rsyslog		IN	A	192.168.10.204
+prometheus	IN	A	192.168.10.205
+grafana		IN	A	192.168.10.205
