--- a/production/roles/bind-secondary/templates/named.conf.options.j2
+++ b/production/roles/bind-secondary/templates/named.conf.options.j2
@@ -1,6 +1,6 @@
 options {
 	directory "/var/cache/bind";
-	dnssec-validation no;
+	dnssec-validation auto;
 	listen-on-v6 { none; };
 	listen-on { 192.168.10.201; };
 	allow-query { 192.168.10.0/24; };
