--- a/production/roles/promgraf/templates/grafana.j2
+++ b/production/roles/promgraf/templates/grafana.j2
@@ -8,7 +8,7 @@ server {
 }
 
 server {
-	listen 443 ssl;
+	listen 443 ssl http2;
 	server_name grafana.exo-industries.xyz;
 	root /var/lib/grafana;
 
