--- a/production/roles/glpi/templates/glpi.j2
+++ b/production/roles/glpi/templates/glpi.j2
@@ -12,6 +12,19 @@ server {
 	server_name glpi.exo-industries.xyz;
 	root /srv/glpi;
 
+	location / {
+        try_files $uri /index.php$is_args$args;
+	}
+
+	location ~ ^/index\.php$ {
+        fastcgi_pass unix:/run/php/php-fpm.sock;
+
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	}
+
 	ssl_certificate /etc/ssl/certs/glpi.exo-industries.xyz.crt;
 	ssl_certificate_key /etc/ssl/private/glpi.exo-industries.xyz.key;
 }
