Add CApen-SSL and GLPI DNS entries

--- a/production/roles/bind-primary/templates/db.10.168.192.in-addr.arpa.j2
+++ b/production/roles/bind-primary/templates/db.10.168.192.in-addr.arpa.j2
@@ -1,6 +1,6 @@
 $TTL	604800
 @	IN	SOA	exo-industries.xyz. admin.exo-industries.xyz. (
-			2023060703	; Serial
+			2023060704	; Serial
 			 604800		; Refresh
 			  86400		; Retry
 			2419200		; Expire
@@ -14,3 +14,5 @@ $TTL	604800
 204	IN	PTR	rsyslog.
 205	IN	PTR	prometheus.
 205	IN	PTR	grafana.
+206	IN	PTR	capen-ssl.
+207	IN	PTR	glpi.
