--- a/production/roles/bind-primary/templates/db.exo-industries.xyz.j2
+++ b/production/roles/bind-primary/templates/db.exo-industries.xyz.j2
@@ -1,6 +1,6 @@
 $TTL	604800
 @	IN	SOA	exo-industries.xyz. admin.exo-industries.xyz. (
-			2023060703	; Serial
+			2023060704	; Serial
 			 604800		; Refresh
 			  86400		; Retry
 			2419200		; Expire
@@ -14,3 +14,5 @@ dhcp-slave	IN	A	192.168.10.203
 rsyslog		IN	A	192.168.10.204
 prometheus	IN	A	192.168.10.205
 grafana		IN	A	192.168.10.205
+capen-ssl	IN	A	192.168.10.206
+glpi		IN	A	192.168.10.207
