Include fastcgi-php.conf

--- a/production/roles/glpi/templates/glpi.j2
+++ b/production/roles/glpi/templates/glpi.j2
@@ -21,6 +21,7 @@ server {
 
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
+	include snippets/fastcgi-php.conf
 
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	}
