--- a/production/roles/glpi/templates/glpi.j2
+++ b/production/roles/glpi/templates/glpi.j2
@@ -12,20 +12,19 @@ server {
 	server_name glpi.exo-industries.xyz;
 	root /srv/glpi;
 
-	location / {
-        try_files $uri /index.php$is_args$args;
-	}
-
-	location ~ ^/index\.php$ {
-        fastcgi_pass unix:/run/php/php-fpm.sock;
-
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-	include snippets/fastcgi-php.conf
-
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	}
-
 	ssl_certificate /etc/ssl/certs/glpi.exo-industries.xyz.crt;
 	ssl_certificate_key /etc/ssl/private/glpi.exo-industries.xyz.key;
+
+	location / {
+	try_files $uri $uri/ =404;
+	}
+
+	location ~ \.php$ {
+        fastcgi_pass unix:/run/php/php-fpm.sock;
+        include snippets/fastcgi-php.conf;
+	}
+
+	location ~ /\.ht {
+		deny all;
+	}
 }
