--- a/production/roles/glpi/templates/glpi.j2
+++ b/production/roles/glpi/templates/glpi.j2
@@ -11,6 +11,7 @@ server {
 	listen 443 ssl http2;
 	server_name glpi.exo-industries.xyz;
 	root /srv/glpi;
+	index index.php;
 
 	ssl_certificate /etc/ssl/certs/glpi.exo-industries.xyz.crt;
 	ssl_certificate_key /etc/ssl/private/glpi.exo-industries.xyz.key;
