--- a/production/roles/glpi/templates/php.ini.j2
+++ b/production/roles/glpi/templates/php.ini.j2
@@ -1390,7 +1390,7 @@ session.use_strict_mode = 0
 session.use_cookies = 1
 
 ; https://php.net/session.cookie-secure
-;session.cookie_secure = on
+session.cookie_secure = on
 
 ; This option forces PHP to fetch and use a cookie for storing and maintaining
 ; the session id. We encourage this operation as it's very helpful in combating
