--- a/production/roles/bind-primary/templates/db.10.168.192.in-addr.arpa.j2
+++ b/production/roles/bind-primary/templates/db.10.168.192.in-addr.arpa.j2
@@ -1,6 +1,6 @@
 $TTL	604800
 @	IN	SOA	exo-industries.xyz. admin.exo-industries.xyz. (
-			2023060704	; Serial
+			2023060705	; Serial
 			 604800		; Refresh
 			  86400		; Retry
 			2419200		; Expire
@@ -16,3 +16,4 @@ $TTL	604800
 205	IN	PTR	grafana.
 206	IN	PTR	capen-ssl.
 207	IN	PTR	glpi.
+208	IN	PTR	gitlab.
