--- a/production/roles/gitlab/templates/gitlab.rb.j2
+++ b/production/roles/gitlab/templates/gitlab.rb.j2
@@ -710,7 +710,7 @@ external_url 'https://gitlab.exo-industries.xyz'
 #### Change the initial default admin password and shared runner registration tokens.
 ####! **Only applicable on initial setup, changing these settings after database
 ####!   is created and seeded won't yield any change.**
-gitlab_rails['initial_root_password'] = "{{ root_password }}"
+# gitlab_rails['initial_root_password'] = "password"
 # gitlab_rails['initial_shared_runners_registration_token'] = "token"
 
 #### Toggle if root password should be printed to STDOUT during initialization
