Define the dark theme as default theme (gitlab)

--- a/production/roles/gitlab/templates/gitlab.rb.j2
+++ b/production/roles/gitlab/templates/gitlab.rb.j2
@@ -130,7 +130,7 @@ external_url 'https://gitlab.exo-industries.xyz'
 ##! `8`  for Light Green
 ##! `9`  for Red
 ##! `10` for Light Red
-# gitlab_rails['gitlab_default_theme'] = 2
+gitlab_rails['gitlab_default_theme'] = 2
 
 ### Default project feature settings
 # gitlab_rails['gitlab_default_projects_features_issues'] = true
