--- a/production/roles/glpi/templates/www.conf.j2
+++ b/production/roles/glpi/templates/www.conf.j2
@@ -50,8 +50,8 @@ listen = /run/php/php8.2-fpm.sock
 ; and group can be specified either by name or by their numeric IDs.
 ; Default Values: Owner is set to the master process running user. If the group
 ;                 is not set, the owner's group is used. Mode is set to 0660.
-listen.owner = www-data
-listen.group = www-data
+listen.owner = {{ nginx_user }}
+listen.group = {{ nginx_user }}
 ;listen.mode = 0660
 
 ; When POSIX Access Control Lists are supported you can set them using
